@@ -59,6 +59,7 @@ Improved Debug CPU:
 - Fixed moving cursor up when address near 0
 
 Improve maximum sent keys to ZENG/ZENG Online
+Improve Memory Cheat: allow to set low address, can delete watches
 Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
 Improved Mac timing by using native timer
 Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
